Finished setting up mailchimp list functionality.

--- a/app/views/admin/_store_setting_fields.html.erb
+++ b/app/views/admin/_store_setting_fields.html.erb
@@ -3,7 +3,7 @@
     <p>Set the MailChimp list Id for your newsletter.</p>
 </div>
 <div class="ninecol last">
-    <fieldset class="widget widget-content widget-last widget-dynamic-top-margin">
+    <fieldset class="widget widget-content">
         <div class="row">
             <div class="twelvecol">
                 <div class="form-group form-last">
